[gd_scene load_steps=4 format=3 uid="uid://d2u24volifeei"]

[ext_resource type="FontFile" uid="uid://c15qulsl5wbmb" path="res://assets/fonts/RussoOne-Regular.ttf" id="1_j2lus"]
[ext_resource type="Script" path="res://scenes/hud/level10/hide_in_cust.gd" id="1_kcffl"]
[ext_resource type="AudioStream" uid="uid://b0ghbd4vvruhh" path="res://music/najatie-na-kompyuternuyu-knopku1.mp3" id="2_p2rui"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_kcffl")

[node name="LevelCompleteLabel" type="Label" parent="."]
offset_left = -1.0
offset_top = 261.0
offset_right = 1922.0
offset_bottom = 504.0
theme_override_fonts/font = ExtResource("1_j2lus")
theme_override_font_sizes/font_size = 64
text = "Cпрятаться за кустом?"
horizontal_alignment = 1

[node name="HideButton" type="Button" parent="."]
offset_left = 709.0
offset_top = 493.0
offset_right = 1183.0
offset_bottom = 584.0
theme_override_fonts/font = ExtResource("1_j2lus")
theme_override_font_sizes/font_size = 36
text = "Да"

[node name="Button" type="Button" parent="."]
offset_left = 712.0
offset_top = 663.0
offset_right = 1187.0
offset_bottom = 753.0
theme_override_fonts/font = ExtResource("1_j2lus")
theme_override_font_sizes/font_size = 36
text = "Нет"

[node name="button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_p2rui")

[connection signal="pressed" from="HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
